<resources>
    <string name="app_name">ACME supermarket</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="good">UserAppify</string>
    <string name="we_pursue_a_relaxed_gaming_experience">We pursue a relaxed gaming experience</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bank_card_information">Bank Card Information</string>
    <string name="title_activity_authenticated">AuthenticatedActivity</string>
    <string name="qr_reader_add_product">QR READER ADD PRODUCT</string>
    <string name="previous_transactions">Previous Transactions</string>
    <string name="add_product">Add Product</string>
    <string name="transactions">Transactions</string>
    <string name="vouchers">Vouchers</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qr_reader">QR Reader</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="rm_prod_basket">Remove product from the </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back_button">Back</string>
    <string name="result_not_found">Result not found</string>
</resources>